tests/compilation/non_enum.stderr
error: target must be an enum
 --> $DIR/non_enum.rs:3:20
  |
3 | #[derive(FromCStr, AsCStr)]
  |                    ^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: target must be an enum
 --> $DIR/non_enum.rs:3:10
  |
3 | #[derive(FromCStr, AsCStr)]
  |          ^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
