tests/compilation/non_enum.rs
use cstr_enum::*;

#[derive(FromCStr, AsCStr)]
struct Struct {
  field: u8
}

fn main() {

}